--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,11 @@ body {
     background-color: blanchedalmond;
     border: none;
     font-weight: bolder;
+    font-size: 3rem;
 }
 
 .btn-shadow {
-    box-shadow: 0px 0px 16px 3px  black;
+    box-shadow: 0px 0px 16px 3px  rgba(0, 0, 0, 0.2);
 }
 
 .dice {
